<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    android:orientation="vertical"
    tools:context=".SupplementDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_banner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTintMode="multiply"
            android:fontFamily="@font/googlesansbold"
            android:foregroundGravity="left"
            android:gravity="center"
            android:hapticFeedbackEnabled="false"
            android:text="@string/main_banner"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/close_btn_detailsactivity"
            android:layout_width="15sp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10sp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:paddingBottom="6dp"
            app:icon="@drawable/baseline_close_24"
            app:iconGravity="end"
            app:iconTint="@color/white"
            app:iconTintMode="src_in" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40sp">

        <TextView
            android:id="@+id/supplement_name_textview_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/googlesansbold"
            android:gravity="center"
            android:padding="20sp"
            android:text="@string/placeholder"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="22sp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10sp"
                    app:srcCompat="@drawable/downarrow" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="40sp"
                    android:fontFamily="@font/googlesansregular"
                    android:text="@string/lastTaken"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/googlesansmedium"
                    android:text="@string/placeholder"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="22sp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10sp"
                    app:srcCompat="@drawable/bottle" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40sp"
                    android:fontFamily="@font/googlesansregular"
                    android:text="@string/dose"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/googlesansmedium"
                    android:text="@string/placeholder"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="22sp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10sp"
                    app:srcCompat="@drawable/pill" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40sp"
                    android:fontFamily="@font/googlesansregular"
                    android:text="@string/nextIntake"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/googlesansmedium"
                    android:text="@string/placeholder"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30sp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="22sp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10sp"
                    app:srcCompat="@drawable/calendar" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40sp"
                    android:fontFamily="@font/googlesansregular"
                    android:text="@string/daysLeft"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/googlesansmedium"
                    android:text="@string/placeholder"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/take_btn_details"
            style="@style/Widget.Material3.Button"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8sp"
            android:backgroundTint="#00AF07"
            android:fontFamily="@font/googlesansregular"
            android:text="@string/take"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/modify_btn_details"
            style="@style/Widget.Material3.Button"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8sp"
            android:backgroundTint="@color/dirty_yellow"
            android:fontFamily="@font/googlesansregular"
            android:text="@string/SuppelemntModifyButton"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete_btn_details"
            style="@style/Widget.Material3.Button"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8sp"
            android:backgroundTint="#E30808"
            android:fontFamily="@font/googlesansregular"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>